--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ span {
     display: flex;
     flex-direction: row;
 }
-/*@media screen and (max-width: 1024px) {*/
-@media all and (orientation: portrait) {
+@media screen and (max-width: 1024px) {
     #cols {
         flex-direction: column;
     }
